--- a/package.json
+++ b/package.json
@@ -5,15 +5,20 @@
   "scripts": {
     "knex": "knex",
     "start": "node server",
-    "test": "lab -a code -L",
+    "test": "lab -a code -L -I '__core-js_shared__'",
     "lint": "eslint ."
   },
   "dependencies": {
+    "bcrypt": "1.0.x",
     "boom": "5.x.x",
+    "hapi-auth-jwt2": "7.3.x",
     "haute-couture": "2.x.x",
     "joi": "10.x.x",
+    "jsonwebtoken": "8.0.x",
     "objection": "0.8.x",
-    "schwifty": "2.x.x"
+    "pg": "7.3.x",
+    "schwifty": "2.x.x",
+    "tandy": "0.x.x"
   },
   "devDependencies": {
     "confidence": "3.x.x",
@@ -23,10 +28,13 @@
     "eslint-plugin-hapi": "4.x.x",
     "glue": "4.x.x",
     "hapi": "16.x.x",
+    "hapi-swagger": "7.x.x",
     "hoek": "4.x.x",
+    "inert": "4.x.x",
     "knex": "0.13.x",
     "lab": "14.x.x",
     "labbable": "2.x.x",
-    "sqlite3": "3.x.x"
+    "sqlite3": "3.x.x",
+    "vision": "4.x.x"
   }
 }
